HTML do projeto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,78 @@
   <link rel="shortcut icon" href="Images/favicon.png">
 </head>
 <body>
-  <h1>Testando Home Instagram</h1>
+  <main>
+    <div id="main-container">
+      <div id="banner-container">
+        <img src="Images/imagem_cel_exterior.png" alt="Crie uma conta no Instagram">
+      </div>
+      <div id="form-container">
+        <div id="form-box">
+          <img id="logo-insta" src="Images/logo_instagram.png" alt="Instagram">
+          <form id="login-form">
+            <input type="text" name="username" placeholder="Telefone, nome de usuário ou email">
+            <input type="password" name="password" placeholder="Senha">
+            <input type="submit" value="Entrar">
+          </form>
+          <div class="separator">
+            <div class="line">
+              <span>OU</span>
+            </div>
+            <div id="other-links">
+              <div id="facebook-login">
+                <a href="#">
+                  <img src="Images/logo_facebook.svg" alt="Facebook">
+                  <span>Entrar com o Facebook</span>
+                </a>
+              </div>
+              <div id="forgot-pass">
+                <a href="#">Esqueceu a senha?</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="register-container">
+          <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
+        </div>
+        <div id="get-app-container">
+          <p>Obtenha o aplicativo.</p>
+          <a href="#">
+            <img src="Images/botao_apple.png" alt="Apple Store">
+          </a>
+          <a href="#">
+            <img src="Images/botao_google_play.png" alt="Google Play">
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <nav>
+      <ul id="footer-link">
+        <li><a href="#">Meta</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Carreiras</a></li>
+        <li><a href="#">Ajuda</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Privacidade</a></li>
+        <li><a href="#">Termos</a></li>
+        <li><a href="#">Principais contas</a></li>
+        <li><a href="#">Localizações</a></li>
+        <li><a href="#">Instagram Lite</a></li>
+        <li><a href="#">Carregamento de contatos e não usuários</a></li>
+        <li><a href="#">Meta Verified</a></li>
+      </ul>
+    </nav>
+    <div>
+      <select name="languages" id="languages">
+        <option value="volvo">Português (Brasil)</option>
+        <option value="saab">English</option>
+        <option value="mercedes">Español</option>
+        <option value="audi">Français</option>
+      </select>
+      <p id="copyright">&copy; 2023 Instagram from Meta</p>
+    </div>
+  </footer>
 </body>
 </html>
