Melhorias no código: removendo ids e trocando div por span

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <main>
-    <div id="main-container">
-      <div id="banner-container">
+    <div>
+      <span>
         <img src="Images/imagem_cel_exterior.png" alt="Crie uma conta no Instagram">
-      </div>
+      </span>
       <div id="form-container">
         <div id="form-box">
           <img id="logo-insta" src="Images/logo_instagram.png" alt="Instagram">
