Ajustes no código: limpando html // tirando borda do focus do input

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </span>
       <div id="form-container">
         <div id="form-box">
-          <img id="logo-insta" src="Images/logo_instagram.png" alt="Instagram">
-          <form id="login-form">
+          <img src="Images/logo_instagram.png" alt="Instagram">
+          <form>
             <input type="text" name="username" placeholder="Telefone, nome de usuário ou email">
             <input type="password" name="password" placeholder="Senha">
             <input type="submit" value="Entrar">
@@ -26,16 +26,14 @@
             <div class="line">
               <span>OU</span>
             </div>
-            <div id="other-links">
-              <div id="facebook-login">
-                <a href="#">
-                  <img src="Images/logo_facebook.svg" alt="Facebook">
-                  <span>Entrar com o Facebook</span>
-                </a>
-              </div>
-              <div id="forgot-pass">
-                <a href="#">Esqueceu a senha?</a>
-              </div>
+            <div id="facebook-login">
+              <a href="#">
+                <img src="Images/logo_facebook.svg" alt="Facebook">
+                <span>Entrar com o Facebook</span>
+              </a>
+            </div>
+            <div id="forgot-pass">
+              <a href="#">Esqueceu a senha?</a>
             </div>
           </div>
         </div>
