--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div id="get-app-container">
           <p>Obtenha o aplicativo.</p>
           <a href="#">
-            <img src="Images/botao_apple.png" alt="Apple Store">
+            <img src="Images/botao_google_play.png" alt="Google Play">
           </a>
           <a href="#">
-            <img src="Images/botao_google_play.png" alt="Google Play">
+            <img src="Images/botao_microsoft.png" alt="Microsoft">
           </a>
         </div>
       </div>
@@ -70,12 +70,12 @@
         <li><a href="#">Meta Verified</a></li>
       </ul>
     </nav>
-    <div>
+    <div id="footer-option">
       <select name="languages" id="languages">
-        <option value="volvo">Português (Brasil)</option>
-        <option value="saab">English</option>
-        <option value="mercedes">Español</option>
-        <option value="audi">Français</option>
+        <option value="portuguese">Português (Brasil)</option>
+        <option value="english">English</option>
+        <option value="spanish">Español</option>
+        <option value="french">Français</option>
       </select>
       <p id="copyright">&copy; 2023 Instagram from Meta</p>
     </div>
